# csc473_fall2018_labs

./: .gitignore  CMakeLists.txt  README.md
labs/: CMakeLists.txt
labs/lab01/: CMakeLists.txt
labs/lab01/include/: CMakeLists.txt  Paths.hpp.in  Planet.hpp  PlanetScene.hpp
labs/lab01/shaders/: Planet.fs.glsl
labs/lab01/source/: Planet.cpp  PlanetScene.cpp  main.cpp
labs/lab02/shaders/: CMakeLists.txt
labs/lab02/source/: CMakeLists.txt  GolfBall.cpp  main.cpp
labs/lab03/include/: Paths.hpp.in  TrackScene.hpp
labs/lab03/shaders/: Spline.fs.glsl  Spline.vs.glsl  UniformMatrices.glsl
labs/lab03/source/: CMakeLists.txt  Spline.cpp  TrackBall.cpp  main.cpp
labs/lab04/include/: CameraScene.hpp  Dragon.hpp  Spline.hpp  TrackBall.hpp
labs/lab04/source/: CMakeLists.txt  CameraScene.cpp  Dragon.cpp  QuaternionCamera.cpp  Spline.cpp
labs/lab05/include/: Paths.hpp.in  Planet.hpp  PlanetScene.hpp
labs/lab05/shaders/: Planet.fs.glsl  Planet.vs.glsl
labs/lab05/source/: CMakeLists.txt  Planet.cpp  PlanetScene.cpp  main.cpp
labs/labs/: CMakeLists.txt
labs/labs/lab01/: timing.md
labs/labs/lab01/shaders/: Planet.vs.glsl
labs/labs/lab02/include/: CMakeLists.txt  GolfBall.hpp  GolfScene.hpp  Paths.hpp.in
labs/labs/lab02/shaders/: Golf.fs.glsl  Golf.vs.glsl
labs/labs/lab02/source/: GolfBall.cpp  GolfScene.cpp
labs/labs/lab03/include/: CMakeLists.txt
labs/labs/lab03/shaders/: LayoutLocations.glsl
labs/labs/lab03/source/: Spline.cpp
labs/labs/lab04/include/: CMakeLists.txt  Paths.hpp.in  QuaternionCamera.hpp
lib/atlas/config/: Compiler.cmake
(+8 files in other folders)
